# wadec

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README  README.md
.github/workflows/: test.yml
src/: decode_errors.rs  index.rs  indices.rs  instr.rs  instructions.rs  integer.rs  leb128.rs  lib.rs  types.rs
src/core/: custom_section.rs  indices.rs  instruction.rs  mod.rs  module.rs
src/core/types/: addrtype.rs  comptype.rs  externtype.rs  functype.rs  globaltype.rs  heaptype.rs  limits.rs  memtype.rs  mod.rs  numtype.rs  rectype.rs  reftype.rs  resulttype.rs  tabletype.rs  tagtype.rs  valtype.rs
src/decode/: helpers.rs  indices.rs  instructions.rs  integer.rs  mod.rs  module.rs
src/decode/sections/: code.rs  custom.rs  data.rs  data_count.rs  element.rs  export.rs  function.rs  global.rs  import.rs  memory.rs  mod.rs  start.rs  table.rs  tag.rs  type.rs
src/decode/types/: comptype.rs  externtype.rs  functype.rs  globaltype.rs  heaptype.rs  limits.rs  memtype.rs  mod.rs  rectype.rs  reftype.rs  resulttype.rs  tabletype.rs  tagtype.rs  valtype.rs
src/types/: memtype.rs  reftype.rs  resulttype.rs  vectype.rs
tests/: README  error_types.rs  spec.rs  tests.rs  z_spec.rs
tests/fixtures/: aggregate_instructions_gc.wasm  control_instructions.wasm  control_instructions.wat  custom_section_size_overreported.wasm  data_section_multi_segment.wasm  element_section_all_alts.wasm  foo.wasm  imports_table_mem_global.wasm  imports_with_tag_func.wasm  invalid_section_order.wasm  kitchensink.wasm  memory64_limits_large.wasm  memory64_limits_min_max.wasm  memory_instructions.wasm  memory_instructions.wat  memory_instructions_memidx.wasm  memory_instructions_multi_memidx.wasm  multi_memory_kitchensink.wasm  numeric_instructions.wat  overlong_blocktype_s33.wasm  parametric_instructions.wasm  parametric_instructions.wat  ref_null_exn.wasm  ref_test_cast.wasm  reference_instructions.wasm  reference_instructions.wat  reftype_heaptype_control_v3.wasm  relaxed_simd_instructions.wasm  return_call_instructions.wasm  table_entry_init_expr.wasm  table_instructions.wasm  table_instructions.wat  tag_export.wasm  tag_section.wasm  tag_section_multi.wasm  two_funcs_add2.wasm  type_section_invalid_functype.wasm  type_section_invalid_valtype_marker.wasm  type_section_recgroup.wasm  variable_instructions.wasm  (+3 more)
tests/fixtures/invalid/: blocktype_index_too_large.wasm  blocktype_index_truncated.wasm  call_indirect_tableidx_overlong.wasm  code_section_entry_size_mismatch.wasm  code_section_local_valtype_invalid.wasm  code_section_locals_count_decode_error.wasm  code_section_locals_count_out_of_bounds.wasm  code_section_locals_vector_length_overlong.wasm  data_count_mismatch.wasm  data_index_without_data_count.wasm  data_init_vector_truncated.wasm  data_invalid_bitfield.wasm  data_section_memidx_overlong.wasm  element_bitfield_decode_error.wasm  element_elemkind_invalid.wasm  element_expression_missing_opcode.wasm  element_funcidx_vector_overlong.wasm  element_init_decode_length.wasm  element_invalid_bitfield.wasm  element_reftype_invalid.wasm  export_name_decode_error.wasm  (+28 more)
wadec/: Cargo.toml
wadec-cli/: Cargo.toml
wadec-cli/src/: main.rs
wadec/tests/: z_spec.rs
(+200 files in other folders)
