[package]
name = "wadec"
version = "0.0.0"
authors = ["Agis Anastasopoulos <a@xz0.org>"]
description = "A WebAssembly binary decoder library."
edition = "2024"
repository = "https://github.com/agis/wadec"
keywords = ["wasm", "webassembly", "wasm-parser", "wasm-decoder", "decoder"]
categories = ["wasm", "parser-implementations", "command-line-utilities"]
license = "Apache-2.0"

[dependencies]
thiserror = "2.0.17"
phf = { version = "0.13.1", features = ["macros"] }

[dev-dependencies]
googletest = "0.14.2"
pretty_assertions = "1.4.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
anyhow = "1.0.99"

[workspace]
resolver = "3"
members = [
    "wadec-cli",
]
