[workspace.package]
version = "0.0.0"
authors = ["Agis Anastasopoulos <a@xz0.org>"]
edition = "2024"
repository = "https://github.com/agis/wadec"
keywords = ["wasm", "webassembly", "wasm-parser", "wasm-decoder", "decoder"]
categories = ["wasm", "parser-implementations", "command-line-utilities"]
license = "Apache-2.0"

[workspace.dependencies]
wadec = { version = "0.0.0", path = "." }

[package]
name = "wadec"
description = "A library for decoding WebAssembly modules."
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
thiserror = "2.0.17"
phf = { version = "0.13.1", features = ["macros"] }

[dev-dependencies]
googletest = "0.14.2"
pretty_assertions = "1.4.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
anyhow = "1.0.99"

[workspace]
resolver = "3"
members = [
    "wadec-cli",
]
