[package]
name = "wadec-cli"
version = "0.0.0"
authors = ["Agis Anastasopoulos <a@xz0.org>"]
description = "A WebAssembly binary decoder."
edition = "2024"
repository = "https://github.com/agis/wadec/wadec-cli"
keywords = ["wasm", "webassembly", "wasm-parser", "wasm-decoder", "decoder"]
categories = ["wasm", "parser-implementations", "command-line-utilities"]
license = "Apache-2.0"

[[bin]]
name = "wadec"
path = "src/main.rs"

[dependencies]
wadec = { path = ".." }
clap = { version = "4.5.53", features = ["derive"] }
patharg = "0.4.1"
thiserror = "2.0.17"
