[package]
name = "wadec-cli"
description = "A WebAssembly binary decoder."
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[[bin]]
name = "wadec"
path = "src/main.rs"

[dependencies]
wadec.workspace = true
clap = { version = "4.5.53", features = ["derive"] }
patharg = "0.4.1"
